asyncFlow/java/aflux-tool-commonanalytics/src/main/java/de/tum/in/aflux/component/commonanalytics/grammar/CommonAnalyticsParser.java


/*
 * aFlux: JVM based IoT Mashup Tool
 * Copyright 2019 Tanmaya Mahapatra
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.tum.in.aflux.component.commonanalytics.grammar;

// Generated from CommonAnalytics.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CommonAnalyticsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, LETTER=47, DIGIT=48, WS=49, LOAD=50, TO=51, SHOW=52, COLUMNS=53, 
		SUMMARIZE=54, FILTER=55, KEYS=56, JOIN=57, MATCH=58, TRUE=59, FALSE=60, 
		AND=61, OR=62, NOT=63, AS=64;
	public static final int
		RULE_script = 0, RULE_alias_name = 1, RULE_sentence = 2, RULE_load_sentence = 3, 
		RULE_show_sentence = 4, RULE_select_sentence = 5, RULE_summarize_sentence = 6, 
		RULE_join_sentence = 7, RULE_file_name = 8, RULE_collection_name = 9, 
		RULE_eol = 10, RULE_expression_list = 11, RULE_condition_list = 12, RULE_groupby_list = 13, 
		RULE_summary_expression_list = 14, RULE_matching_list = 15, RULE_database_name = 16, 
		RULE_expression = 17, RULE_groupby_clause = 18, RULE_summary_expression_and_alias = 19, 
		RULE_summary_expression = 20, RULE_matching_clause = 21, RULE_valid_id_char = 22, 
		RULE_valid_file_path_char = 23, RULE_simple_expression = 24, RULE_string_expression = 25, 
		RULE_boolean_expression = 26, RULE_boolean_constant = 27, RULE_comparison = 28, 
		RULE_numeric_expression = 29, RULE_comparison_operator = 30, RULE_numeric_operator = 31, 
		RULE_string_operator = 32, RULE_string_literal = 33, RULE_brackets_expression = 34, 
		RULE_braces_expression = 35, RULE_numeric_operation = 36, RULE_string_operation = 37, 
		RULE_number = 38, RULE_structure_definition_list = 39, RULE_structure_definition_field = 40, 
		RULE_data_type = 41;
	public static final String[] ruleNames = {
		"script", "alias_name", "sentence", "load_sentence", "show_sentence", 
		"select_sentence", "summarize_sentence", "join_sentence", "file_name", 
		"collection_name", "eol", "expression_list", "condition_list", "groupby_list", 
		"summary_expression_list", "matching_list", "database_name", "expression", 
		"groupby_clause", "summary_expression_and_alias", "summary_expression", 
		"matching_clause", "valid_id_char", "valid_file_path_char", "simple_expression", 
		"string_expression", "boolean_expression", "boolean_constant", "comparison", 
		"numeric_expression", "comparison_operator", "numeric_operator", "string_operator", 
		"string_literal", "brackets_expression", "braces_expression", "numeric_operation", 
		"string_operation", "number", "structure_definition_list", "structure_definition_field", 
		"data_type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'LOAD'", "'TO'", "'STRUCTURE'", "'('", "')'", "'SHOW'", "'='", 
		"'SELECT'", "'FILTER'", "'SUMMARIZE'", "'KEYS'", "'JOIN'", "'AND'", "'COLUMNS'", 
		"'MATCH'", "'.'", "';'", "'*'", "','", "'['", "']'", "'{'", "'}'", "'AS'", 
		"'SUM('", "'AVG('", "'COUNT()'", "'-'", "'_'", "'/'", "'OR'", "'NOT'", 
		"'=='", "'TRUE'", "'FALSE'", "'>'", "'<'", "'>='", "'<='", "'+'", "'''", 
		"'$'", "':'", "'INT'", "'STRING'", "'BOOLEAN'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "LETTER", 
		"DIGIT", "WS", "LOAD", "TO", "SHOW", "COLUMNS", "SUMMARIZE", "FILTER", 
		"KEYS", "JOIN", "MATCH", "TRUE", "FALSE", "AND", "OR", "NOT", "AS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CommonAnalytics.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CommonAnalyticsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__27) | (1L << T__28) | (1L << LETTER) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(84);
				sentence();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alias_nameContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(CommonAnalyticsParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(CommonAnalyticsParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(CommonAnalyticsParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(CommonAnalyticsParser.DIGIT, i);
		}
		public List<Valid_id_charContext> valid_id_char() {
			return getRuleContexts(Valid_id_charContext.class);
		}
		public Valid_id_charContext valid_id_char(int i) {
			return getRuleContext(Valid_id_charContext.class,i);
		}
		public Alias_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterAlias_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitAlias_name(this);
		}
	}

	public final Alias_nameContext alias_name() throws RecognitionException {
		Alias_nameContext _localctx = new Alias_nameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alias_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(93);
					switch (_input.LA(1)) {
					case LETTER:
						{
						setState(90);
						match(LETTER);
						}
						break;
					case DIGIT:
						{
						setState(91);
						match(DIGIT);
						}
						break;
					case T__27:
					case T__28:
						{
						setState(92);
						valid_id_char();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(95); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Load_sentenceContext load_sentence() {
			return getRuleContext(Load_sentenceContext.class,0);
		}
		public Show_sentenceContext show_sentence() {
			return getRuleContext(Show_sentenceContext.class,0);
		}
		public Select_sentenceContext select_sentence() {
			return getRuleContext(Select_sentenceContext.class,0);
		}
		public Join_sentenceContext join_sentence() {
			return getRuleContext(Join_sentenceContext.class,0);
		}
		public Summarize_sentenceContext summarize_sentence() {
			return getRuleContext(Summarize_sentenceContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				load_sentence();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				show_sentence();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				select_sentence();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				join_sentence();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				summarize_sentence();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Load_sentenceContext extends ParserRuleContext {
		public File_nameContext file_name() {
			return getRuleContext(File_nameContext.class,0);
		}
		public Collection_nameContext collection_name() {
			return getRuleContext(Collection_nameContext.class,0);
		}
		public Structure_definition_listContext structure_definition_list() {
			return getRuleContext(Structure_definition_listContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public Load_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterLoad_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitLoad_sentence(this);
		}
	}

	public final Load_sentenceContext load_sentence() throws RecognitionException {
		Load_sentenceContext _localctx = new Load_sentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_load_sentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__0);
			setState(105);
			file_name();
			setState(106);
			match(T__1);
			setState(107);
			collection_name();
			setState(108);
			match(T__2);
			setState(109);
			match(T__3);
			setState(110);
			structure_definition_list();
			setState(111);
			match(T__4);
			setState(112);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Show_sentenceContext extends ParserRuleContext {
		public Collection_nameContext collection_name() {
			return getRuleContext(Collection_nameContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public Show_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterShow_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitShow_sentence(this);
		}
	}

	public final Show_sentenceContext show_sentence() throws RecognitionException {
		Show_sentenceContext _localctx = new Show_sentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_show_sentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__5);
			setState(115);
			collection_name();
			setState(116);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_sentenceContext extends ParserRuleContext {
		public List<Collection_nameContext> collection_name() {
			return getRuleContexts(Collection_nameContext.class);
		}
		public Collection_nameContext collection_name(int i) {
			return getRuleContext(Collection_nameContext.class,i);
		}
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public Condition_listContext condition_list() {
			return getRuleContext(Condition_listContext.class,0);
		}
		public Select_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterSelect_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitSelect_sentence(this);
		}
	}

	public final Select_sentenceContext select_sentence() throws RecognitionException {
		Select_sentenceContext _localctx = new Select_sentenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_select_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			collection_name();
			setState(119);
			match(T__6);
			setState(120);
			match(T__7);
			setState(121);
			collection_name();
			setState(122);
			match(T__3);
			setState(123);
			expression_list();
			setState(124);
			match(T__4);
			setState(125);
			match(T__8);
			setState(126);
			match(T__3);
			setState(128);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__27) | (1L << T__28) | (1L << T__31) | (1L << T__33) | (1L << T__34) | (1L << T__40) | (1L << LETTER) | (1L << DIGIT))) != 0)) {
				{
				setState(127);
				condition_list();
				}
			}

			setState(130);
			match(T__4);
			setState(131);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Summarize_sentenceContext extends ParserRuleContext {
		public List<Collection_nameContext> collection_name() {
			return getRuleContexts(Collection_nameContext.class);
		}
		public Collection_nameContext collection_name(int i) {
			return getRuleContext(Collection_nameContext.class,i);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public Summary_expression_listContext summary_expression_list() {
			return getRuleContext(Summary_expression_listContext.class,0);
		}
		public Groupby_listContext groupby_list() {
			return getRuleContext(Groupby_listContext.class,0);
		}
		public Summarize_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summarize_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterSummarize_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitSummarize_sentence(this);
		}
	}

	public final Summarize_sentenceContext summarize_sentence() throws RecognitionException {
		Summarize_sentenceContext _localctx = new Summarize_sentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_summarize_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			collection_name();
			setState(134);
			match(T__6);
			setState(135);
			match(T__9);
			setState(136);
			collection_name();
			setState(137);
			match(T__3);
			setState(139);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26))) != 0)) {
				{
				setState(138);
				summary_expression_list();
				}
			}

			setState(141);
			match(T__4);
			setState(142);
			match(T__10);
			setState(143);
			match(T__3);
			setState(145);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__27) | (1L << T__28) | (1L << LETTER) | (1L << DIGIT))) != 0)) {
				{
				setState(144);
				groupby_list();
				}
			}

			setState(147);
			match(T__4);
			setState(148);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Join_sentenceContext extends ParserRuleContext {
		public List<Collection_nameContext> collection_name() {
			return getRuleContexts(Collection_nameContext.class);
		}
		public Collection_nameContext collection_name(int i) {
			return getRuleContext(Collection_nameContext.class,i);
		}
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public Matching_listContext matching_list() {
			return getRuleContext(Matching_listContext.class,0);
		}
		public Join_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_join_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterJoin_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitJoin_sentence(this);
		}
	}

	public final Join_sentenceContext join_sentence() throws RecognitionException {
		Join_sentenceContext _localctx = new Join_sentenceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_join_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			collection_name();
			setState(151);
			match(T__6);
			setState(152);
			match(T__11);
			setState(153);
			collection_name();
			setState(154);
			match(T__12);
			setState(155);
			collection_name();
			setState(156);
			match(T__13);
			setState(157);
			match(T__3);
			setState(158);
			expression_list();
			setState(159);
			match(T__4);
			setState(160);
			match(T__14);
			setState(161);
			match(T__3);
			setState(163);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__27) | (1L << T__28) | (1L << LETTER) | (1L << DIGIT))) != 0)) {
				{
				setState(162);
				matching_list();
				}
			}

			setState(165);
			match(T__4);
			setState(166);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_nameContext extends ParserRuleContext {
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public File_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterFile_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitFile_name(this);
		}
	}

	public final File_nameContext file_name() throws RecognitionException {
		File_nameContext _localctx = new File_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_file_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			string_literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Collection_nameContext extends ParserRuleContext {
		public Alias_nameContext alias_name() {
			return getRuleContext(Alias_nameContext.class,0);
		}
		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class,0);
		}
		public Collection_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collection_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterCollection_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitCollection_name(this);
		}
	}

	public final Collection_nameContext collection_name() throws RecognitionException {
		Collection_nameContext _localctx = new Collection_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_collection_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(170);
				database_name();
				setState(171);
				match(T__15);
				}
				break;
			}
			setState(175);
			alias_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EolContext extends ParserRuleContext {
		public EolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterEol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitEol(this);
		}
	}

	public final EolContext eol() throws RecognitionException {
		EolContext _localctx = new EolContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_eol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_listContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<Expression_listContext> expression_list() {
			return getRuleContexts(Expression_listContext.class);
		}
		public Expression_listContext expression_list(int i) {
			return getRuleContext(Expression_listContext.class,i);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).enterExpression_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommonAnalyticsListener ) ((CommonAnalyticsListener)listener).exitExpression_list(this);
		}
	}

	public final Expression_listContext expression_list() throws RecognitionException {
		Expression_listContext _localctx = new Expression_listContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expression_list);
		try {
			int _alt;
			setState(191);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				match(T__17);
				}
				break;
			case T__3:
			case T__19:
			case T__21:
			case T__27:
			case T__28:
			case T__31:
			case T__33:
			case T__34:
			case T__40:
			case LETTER:
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(180);
					expression();
					}
					break;
				case 2:
					{
					setState(181);
					expression();
					setState(186);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(182);
							match(T__18);
							setState(183);
							expression_list();
							}
							} 
						}
						setState(188);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					}
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
